[project]
name = "g3rakisecbot"
author = "RafalW3bCraft"
version = "0.1.0"
description = "G3r4kiSecBot is an enterprise-grade security bot system that combines a powerful Telegram bot with a cyber-themed web dashboard. It provides real-time threat detection, URL scanning, and comprehensive security monitoring for both individual users and Telegram groups."
requires-python = ">=3.11"
dependencies = [
    "cryptography==42.0.2",
    "flask==3.0.0",
    "flask-sqlalchemy==3.1.1",
    "pillow==9.5.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "python-telegram-bot>=22.2",
    "qrcode==7.4.2",
    "requests==2.31.0",
    "routes>=2.5.1",
    "sqlalchemy==2.0.25",
    "werkzeug==3.0.1",
]
